# hiredar-saas-archive

./: .env.example  .gitignore  .pylintrc  AGENTS.md  Dockerfile  MODELS.md  Procfile  README-MVP.md  README.md  RECRUITER_PAIN_POINTS.md  RESUME_PROCESSING.md  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.js
.cursor/rules/: sitemap-and-llms-txt.mdc
apps/: __init__.py
apps/authentication/: __init__.py  adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  types.py  urls.py  validators.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_user_user_type.py  0002_delete_authenticateduser.py  0002_remove_user_location.py  0002_user_user_name_trgm.py  0003_backfill_user_type_admin.py  0003_remove_bio_field.py  0004_convert_to_single_name_field.py  0004_user_is_us_certified.py  0005_user_timezone.py  0006_alter_user_user_type.py  0007_alter_user_name.py
apps/authentication/models/: __init__.py  user.py
apps/authentication/services/: email_verifier.py
apps/authentication/templatetags/: __init__.py  skill_tags.py
apps/authentication/tests/: __init__.py  test_models.py  test_oauth_mobile.py  test_views.py
apps/authentication/views/: __init__.py  account_views.py  auth_views.py  email_actions.py  email_verification.py  oauth_mobile.py
apps/candidates/: __init__.py  admin.py  apps.py  urls.py
apps/candidates/extraction_worker/: __init__.py  core.py  worker.py
apps/candidates/migrations/: 0001_initial.py  0002_candidateprofile.py  0003_remove_candidateprofile_salary_min.py  0004_candidateprofilerolerecommendation.py  0005_alter_candidateprofile_options.py  0006_resume_processing_models.py  0007_alter_candidateprofile_candidate_name_and_more.py  __init__.py
apps/candidates/models/: __init__.py  candidate_pool.py  candidate_profile.py  candidate_role_recommendation.py  resume_processing_job.py  resume_processing_task_progress.py
apps/candidates/services/: __init__.py  profile_service.py  profile_updater.py  resume_pipeline.py
apps/candidates/tasks/: __init__.py  personal_tagline_tasks.py  pool_tasks.py  post_resume_processing_tasks.py  profile_enrichment_tasks.py  recommendation_tasks.py
apps/candidates/templatetags/: __init__.py  resume_tags.py
apps/candidates/tests/: __init__.py
apps/candidates/views/: __init__.py  candidate_profile_views.py
apps/core/: admin.py  apps.py  email_backends.py  logging.py  models.py  upload_validators.py  urls.py  views.py
apps/core/management/: __init__.py
apps/core/middleware/: page_view_middleware.py  timezone_middleware.py
apps/core/migrations/: 0001_create_cache_table.py  0002_initial.py  0003_drop_messaging_tables.py  0004_drop_messaging_participants.py  0005_pageviewcount.py
apps/core/models/: __init__.py  page_view.py  task_meta.py
apps/core/services/: __init__.py  task_idempotency.py  task_status.py
apps/core/tasks/: __init__.py  common.py
apps/core/templates/: base.html
apps/core/tests/: __init__.py  test_xml_processing.py
apps/core/utils/: __init__.py  task_utils.py  xml_processing.py
apps/core/views/: __init__.py  healthcheck.py  index.py  info.py
apps/job_seekers/: admin.py  apps.py  context_processors.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/job_seekers/management/: __init__.py
apps/job_seekers/middleware/: resume_upload_required.py
apps/job_seekers/migrations/: 0001_initial.py  0002_alter_rolerecommendation_created_at_talentsheet.py  0002_jobseekerprofile_candidate_name.py  0002_jobseekerprofile_jobseekerprofile_skills_trgm.py  0002_jobseekerprofile_resume_xml.py  0002_move_role_recommendation_from_jobs.py  0002_recalculate_years_of_experience.py  0002_remove_jobseekerprofile_user.py  0002_remove_talentsheet_salary_max.py  0002_rename_current_position_to_most_recent_title.py  0003_alter_jobseekerprofile_phone.py  0003_convert_skills_to_pipe_format.py  0003_remove_rolerecommendation_uploaded_resume_pool_and_more.py  0003_rename_about_me_to_professional_summary.py  0003_talentsheet_add_skills.py  0003_talentsheet_status_and_more.py  0003_update_role_recommendation_related_name.py  0004_jobseekerprofile_education.py  0004_remove_confidence_score.py  0004_remove_talentsheet_status_talentsheet_is_published.py  0004_remove_uploadedresumepool_job_opening.py  0004_talentsheet_personal_tagline.py  0004_talentsheet_skills_not_null.py  0005_alter_rolerecommendation_options.py  0005_fix_skills_formatting.py  0005_jobseekerprofile_certifications_and_more.py  0005_jobseekerprofile_personal_tagline.py  0005_remove_jobseekerprofile_in_talent_pool_and_more.py  (+18 more)
apps/jobs/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/matching/: __init__.py  admin.py  apps.py  match.py  models.py  signals.py  urls.py
apps/messaging/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/recruiters/: admin.py  apps.py  constants.py  forms.py  models.py  signals.py  urls.py  views.py
apps/reports/: apps.py  services.py  tests.py  urls.py  views.py
apps/resume_processing/: __init__.py  apps.py  models.py
assets/css/: tailwind.css
docs/: APP_STRUCTURE.md  ASYNC_TASKS.md  CELERY_CONVERSION_GUIDE.md  HIRING_HIGHLIGHTS.md  HIRING_MANAGER_RELATIONSHIP.md  JOB_OPENING_EMBEDDING.md  LINTER.md  MARKETING_STRATEGY.md  MATCHING_IMPLEMENTATION_DETAILS.md  MATCHING_OVERVIEW.md  MATCHING_TASKS_CELERY_CONVERSION.md  MATCH_ANALYSIS_FEATURE.md  MISSION.md  MODELS.md  RESUME_PROCESSING.md  RESUME_PROCESSING_PIPELINE.md  SCHEDULED_TASKS.md  TALENT_SHEET_EMBEDDING.md  TECHNICAL_IMPROVEMENT_OPPORTUNITIES.md  TESTING.md  TODO_LIST.md  WORKSHOP.md  XML_ERROR_REPORTING.md
hiredar/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
hiredar/llm/: __init__.py  client.py  prompts.py  xml_utils.py
pylint_plugins/: __init__.py  type_checker.py
scripts/: README.md  fix_imports.py  ingest_resumes.py  install_plugins.py  lint.py  minify-css.js
static/: llms.txt  robots.txt  sitemap.xml
static/css/: tailwind.css  tailwind_dev.css  temp.css
(+492 files in other folders)
