[project]
name = "hiredar"
version = "0.1.0"
description = "AI-powered job matching platform"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "django>=5.2.0",
    "django-allauth>=65.7.0",
    "django-htmx>=1.23.0",
    "pymupdf>=1.25.4",  # For PDF parsing
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",  # Required by django-allauth
    "pyjwt>=2.10.1",  # Required by django-allauth
    "cryptography>=44.0.2",  # Required by django-allauth
    "pillow>=11.2.1",  # Required for ImageField
    "django-q2>=1.7.6",
    "pdfplumber>=0.11.5",
    "promptdown>=0.9.0",
    "openai>=1.75.0",
    "pinecone[grpc]>=6.0.2",
    "numpy>=2.2.5",
    "whitenoise>=6.9.0",
    "python-magic>=0.4.27",
    "django-storages[boto3]>=1.14.6",
    "psycopg[binary]>=3.2.6",
    "stripe>=12.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "pylint>=3.3.6",
    "pylint-django>=2.6.1",
    "django-stubs>=5.1.3",
    "django-stubs-ext>=5.1.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "hiredar.settings"

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "allauth.*"
ignore_missing_imports = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=pylint-plugins",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hiredar.settings"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["apps"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
