[project]
name = "hiredar"
version = "0.1.0"
description = "AI-powered job matching platform"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "celery[sqlalchemy]>=5.5.3",
    "cryptography>=46.0.2",  # Required by django-allauth
    "django>=5.2.7",
    "django-allauth>=65.12.0",
    "django-celery-results>=2.6.0",
    "django-htmx>=1.26.0",
    "django-lb-health-check>=1.0.1",
    "django-markdownify>=0.9.5",
    "django-post-office>=3.10.1",
    "django-storages[boto3]>=1.14.6",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",  # Required for ImageField
    "pinecone[grpc]>=7.3.0",
    "promptdown>=0.10.0",
    "psycopg[binary]>=3.2.10",
    "pyjwt>=2.10.1",  # Required by django-allauth
    "pymupdf>=1.26.5",  # For PDF parsing
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "quickemailverification>=1.0.4",
    "requests>=2.32.5",  # Required by django-allauth
    "stripe>=13.0.1",
    "tenacity>=9.1.2",
    "unstructured[all-docs]>=0.18.15",
    "WeasyPrint>=66.0",
    "whitenoise>=6.11.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "proprietary - not open source"}


[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "django-stubs-ext>=5.2.7",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "pylint-django>=2.6.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "hiredar.settings"

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "allauth.*"
ignore_missing_imports = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=pylint-plugins",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hiredar.settings"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["apps", "hiredar/llm/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*Error when trying to teardown test databases.*:pytest.PytestWarning",
]
